k8s/lock-services-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lock-service
  namespace: electronic-lock-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lock-service
  template:
    metadata:
      labels:
        app: lock-service
    spec:
      containers:
        - name: lock-service
          image: electronic-lock-app/lock-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3003
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 5
            periodSeconds: 5
