k8s/log-services-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-service
  namespace: electronic-lock-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-service
  template:
    metadata:
      labels:
        app: log-service
    spec:
      containers:
        - name: log-service
          image: electronic-lock-app/log-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3002
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /api/logs/health
              port: 3002
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/logs/health
              port: 3002
            initialDelaySeconds: 5
            periodSeconds: 5
