k8s/user-services-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-services
  namespace: electronic-lock-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-services
  template:
    metadata:
      labels:
        app: user-services
    spec:
      containers:
        - name: user-service
          image: electronic-lock-app/user-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /users/health
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /users/health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 5
