k8s/user-services-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: electronic-lock-app
spec:
  selector:
    app: user-service
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
  type: ClusterIP
